Stylefix: post-element overflow causes buggy layout

--- a/src/app/shared/components/post-element/post-element.component.scss
+++ b/src/app/shared/components/post-element/post-element.component.scss
@@ -3,7 +3,6 @@
 :host {
   display: flex;
   flex-direction: column;
-  overflow: auto;
 
   &::-webkit-scrollbar {
     height: var(--scrollbar-width);
